@@ -5,6 +5,10 @@ Changelog of lizard-waterbalance
 0.10 (unreleased)
 -----------------
 
+- Added graph choice: display per year/month/day.
+
+- Made monthly totals/average more flexible by allowing year/month/day.
+
 - The Admin interface to the selection of FEWS-timeseries has become more
   user-friendly.
 
